Adicionado campo para confirmar a senha, na Create Account; Adicionado efeito, quando se toca nas imagens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="altera_valor">Alterar valor</string>
     <string name="nova_categoria">Nova Categoria</string>
     <string name="tipo_lancamento">Tipo do lançamento</string>
+    <string name="password_conf">Confirmar senha</string>
 </resources>
